# agentic-design-pattern-tutorial

./: .gitignore  README.md  pyproject.toml
src/: agent.py  chapter01.py
src/chapter1/: __init__.py
src/chapter2/: agent.py
