
[tool.poetry]
name = "agentic-design-pattern"
version = "0.1.0"
description = ""
authors = ["TAN PENG <tanpeng8847@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
google-adk = "*"
nest-asyncio = ">=1.6.0,<2.0.0"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false
